# AutoTabML-Studio

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MIGRATION_GUIDE.md  Makefile  README.md  RELEASE_NOTES_v0.2.0.md  SECURITY.md  UPGRADE_SUMMARY.md  USAGE.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release-readiness.yml  security.yml
.streamlit/: config.toml
app/: __init__.py  cli.py  concurrency.py  errors.py  gpu.py  logging_config.py  main.py  path_utils.py  release_metadata.py  startup.py
app/artifacts/: __init__.py  manager.py
app/backends/: __init__.py  base.py  colab_mcp_backend.py  local_backend.py
app/config/: enums.py  models.py  settings.py
app/ingestion/: __init__.py  base.py  csv_loader.py  dataframe_loader.py  errors.py  excel_loader.py  factory.py  html_table_loader.py  kaggle_loader.py  metadata.py  normalizer.py  schemas.py  types.py  uci_loader.py  url_loader.py  utils.py
app/modeling/: __init__.py  base.py
app/modeling/benchmark/: __init__.py  artifacts.py  base.py  errors.py  lazypredict_runner.py  mlflow_tracking.py  persistence.py  ranker.py  schemas.py  selectors.py  service.py  summary.py
app/modeling/flaml/: __init__.py  artifacts.py  errors.py  mlflow_tracking.py  schemas.py  service.py  setup_runner.py
app/modeling/pycaret/: __init__.py  artifacts.py  base.py  compare_runner.py  errors.py  evaluate_runner.py  metrics_runner.py  mlflow_tracking.py  persistence.py  schemas.py  selectors.py  service.py  setup_runner.py  summary.py  tune_runner.py
app/notebooks/: generator.py
app/observability/: __init__.py  context.py  logging_setup.py  metrics.py  tracing.py
app/pages/: benchmark_page.py  compare_page.py  dashboard_page.py  dataset_intake_page.py  dataset_workspace.py  experiment_page.py  flaml_automl_page.py  glossary.py  history_page.py  model_testing_page.py  models_page.py  notebook_page.py  prediction_page.py  predictions_page.py  profiling_page.py  registry.py  registry_page.py  settings_page.py  shared_history.py  ui_cache.py  ui_errors.py  ui_labels.py  validation_page.py  workflow_guide.py
app/pages/services/: __init__.py  experiment_workflow.py  prediction_workflow.py
app/prediction/: __init__.py  artifacts.py  base.py  batch_predict.py  errors.py  history.py  loader.py  schemas.py  scorer.py  secure_loader.py  selectors.py  single_row_predict.py  summary.py  validators.py
app/profiling/: __init__.py  artifacts.py  base.py  errors.py  schemas.py  selectors.py  service.py  summary.py  ydata_runner.py
app/providers/: anthropic_provider.py  base.py  catalog_service.py  gemini_provider.py  ollama_provider.py  openai_provider.py
app/registry/: __init__.py  errors.py  registry_service.py  schemas.py
app/security/: errors.py  masking.py  safe_csv.py  safe_http.py  trusted_artifacts.py
app/state/: session.py
app/storage/: __init__.py  migrations.py  models.py  recorders.py  sqlite_connector.py  store.py
app/storage/repositories/: __init__.py  base.py  batch_runs.py  datasets.py  jobs.py  projects.py  saved_models.py
app/tracking/: __init__.py  artifacts.py  compare_service.py  description_generator.py  errors.py  filters.py  history_service.py  mlflow_query.py  schemas.py  summary.py
app/validation/: __init__.py  artifacts.py  base.py  errors.py  gx_builders.py  gx_context.py  gx_runner.py  rules.py  schemas.py  service.py  summary.py
datasets/uci/Air_Quality/: air_quality.csv
datasets/uci/Amazon_Google_Reviews/: amazon_google_sampled_50k.csv
datasets/uci/Auto_MPG/: auto_mpg.csv
datasets/uci/Automobile/: automobile.csv
datasets/uci/Breast_Cancer/: breast_cancer.csv
datasets/uci/Breast_Cancer_WI/: breast_cancer_wi.csv
datasets/uci/COREVQA/: COREVQA_data.csv
datasets/uci/Diabetes/: diabetes.csv
datasets/uci/Drug_Autoimmunity/: drug_autoimmunity.csv
datasets/uci/Electricity_Load/: electricity_load.csv
datasets/uci/Gas_Sensor_Low/: gas_sensor_low.csv
datasets/uci/HLS_CMDS/: HS.csv  LS.csv  Mix.csv
datasets/uci/Haberman_Survival/: haberman_survival.csv
datasets/uci/Hayes_Roth/: hayes_roth.csv
datasets/uci/Heart_Failure/: heart_failure.csv
datasets/uci/Horse_Colic/: horse_colic.csv
datasets/uci/Lattice_Physics/: test.csv
datasets/uci/Math_Learning/: math_learning.csv
datasets/uci/NF1_Clinical/: nf1_clinical.csv
datasets/uci/Seeds/: seeds.csv
docs/: README.md  architecture.md  colab-mcp-spike-findings.md  demo-guide.md  developer-guide.md  execution-validation-report-session2.md  limitations.md  operations.md  release-checklist.md  release-notes-template.md  repo-presentation.md  user-flow.md  user-guide.md
docs/assets/: README.md
scripts/: _fetch_uci_meta.py  batch_uci_runner.py  batch_uci_runner_200.py  capture_screenshots.py  colab_mcp_spike.py  fetch_remaining_sklearn.py  save_remaining_sklearn.py  verify_optional_deps.py
tests/: conftest.py  test_artifact_manager.py  test_batch_runner.py  test_benchmark.py  test_benchmark_persistence.py  test_cli.py  test_cli_smoke.py  test_colab_mcp_backend.py  test_colab_mcp_real.py  test_concurrency.py  test_config.py  test_dataset_workspace.py  test_e2e_local_smoke.py  test_errors.py  test_experiment_workflow_service.py  test_flaml_automl.py  test_gpu.py  test_hardening_smoke.py  test_ingestion.py  test_ingestion_async.py  test_ingestion_utils.py  test_integration_optional_deps.py  test_logging_config.py  test_mlflow_query_batch.py  test_modeling_architecture.py  test_modeling_exception_handling.py  test_notebook_generator.py  test_observability.py  test_page_registry.py  test_prediction.py  test_prediction_workflow_service.py  test_profiling.py  test_providers.py  test_pycaret_experiment.py  test_pycaret_setup_runner.py  test_registry.py  test_release_metadata.py  test_safe_csv.py  test_safe_csv_properties.py  test_safe_http.py  (+13 more)
(+10 files in other folders)
