[build-system]
requires = [
    "setuptools>=68",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "autotabml-studio"
dynamic = ["version"]
description = "Local-first tabular ML workbench with Streamlit UI and CLI"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
maintainers = [
    {name = "Ahmad", email = "datasciahmad@gmail.com"},
]
keywords = ["automl", "machine-learning", "tabular-data", "streamlit", "mlflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2",
    "streamlit>=1.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "lxml>=5.2",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
kaggle = [
    "kaggle>=1.7",
]
uci = [
    "ucimlrepo>=0.0.7",
]
validation = [
    "great_expectations>=1.0",
]
profiling = [
    "setuptools>=68,<83",
    "ydata-profiling>=4.6",
]
benchmark = [
    "lazypredict>=0.3.0",
    "scikit-learn>=1.4",
    "mlflow>=2.12",
    "matplotlib>=3.8",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "catboost>=1.2",
]
experiment = [
    "pycaret>=3.0.4; python_version < '3.13'",
    "mlflow>=2.12",
    "matplotlib>=3.8",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "catboost>=1.2",
]
flaml = [
    "flaml[automl]>=2.1",
    "scikit-learn>=1.4",
    "lightgbm>=4.0",
    "xgboost>=2.0",
]
gpu = [
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "catboost>=1.2",
]
colab = [
    "mcp>=1.0",
]
dev = [
    "build>=1.2",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
autotabml = "app.cli:main"

[project.urls]
Homepage = "https://github.com/pypi-ahmad/AutoTabML-Studio"
Repository = "https://github.com/pypi-ahmad/AutoTabML-Studio"
Documentation = "https://github.com/pypi-ahmad/AutoTabML-Studio/tree/main/docs"
Issues = "https://github.com/pypi-ahmad/AutoTabML-Studio/issues"
Changelog = "https://github.com/pypi-ahmad/AutoTabML-Studio/blob/main/CHANGELOG.md"

[tool.setuptools.dynamic]
version = {attr = "app.__version__"}

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-m 'not integration'"
markers = [
    "integration: optional heavy-dependency integration tests run in the manual CI job",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["F", "E4", "E7", "E9", "I", "UP"]
ignore = ["E741", "E402"]
per-file-ignores = {"app/pages/*" = ["F821"], "app/cli.py" = ["F841"]}

[tool.coverage.run]
omit = [
    "app/main.py",
    "app/pages/*_page.py",
    "app/pages/predictions_page.py",
    "app/pages/glossary.py",
    "app/pages/workflow_guide.py",
    "app/pages/shared_history.py",
    "app/notebooks/generator.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
]



